# HS_SPR_CAL

./: APP.cpp  AUTO.cpp  BF.cpp  CMakeLists.txt  HSSPRCAL_L.cpp  HSSPRCAL_W.cpp  OPT.cpp  OPT2.cpp  OPT2_UI.cpp  README.md  UI.cpp  auto.cpp  auto.h  basic.cpp  basic.h  fml.txt  formula.cpp  formula.h  gen.cpp  gen.h  offer.cpp  offer.h  output.cpp  output.h  pre.cpp  pre.h  qiz.txt  solve.cpp  solve.h  trans.cpp  trans.h  ui.cpp  ui.h
EGEtools/: readme.txt
buildl/: CMakeCache.txt  HSSPRCAL  Makefile  cmake_install.cmake  fml.txt
buildw/: dft.txt  fml.txt
source/: HSSPRCAL_L.cpp  HSSPRCAL_W.cpp  adapt.cpp  adapt.h  auto.cpp  auto.h  basic.cpp  basic.h  deck.cpp  deck.h  formula.cpp  formula.h  gen.cpp  gen.h  offer.cpp  offer.h  output.cpp  output.h  pre.cpp  pre.h  solve.cpp  solve.h  solve_refresh.cpp  solve_refresh.h  trans.cpp  trans.h  ui.cpp  ui.h
